--- a/studies/bib/extractions.bib
+++ b/studies/bib/extractions.bib
@@ -1550,7 +1550,7 @@ bind_field(
   FEATURE_CATEGORIES = {Rhythm, Timbre, Harmony, Dynamics, Melody, High-level, Form, Expressivity},
   FEATURE_SOURCE = {essentia, marsyas},
   FEATURE_REDUCTION_METHOD = {pretrained model, neural networks},
-  MODEL_CATEGORY = {classification},
+  MODEL_CATEGORY = {regression},
   MODEL_DETAIL = {recurrent neural networks, long short-term memory units},
   MODEL_MEASURE = {R2, MAE},
   MODEL_COMPLEXITY_PARAMETERS = {training_epochs = 100, n layers = 1-2, lstm_units = 124 or 248},
