--- a/analysis/preprocessing.qmd
+++ b/analysis/preprocessing.qmd
@@ -116,7 +116,7 @@ metaMER_results$studyREF <- str_to_sentence(metaMER_results$studyREF)
 #
 metaMER_results$model_id <- tolower(metaMER_results$model_id)
 metaMER_results$model_class_id <- 'Unclassified'
-metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'lr|lm|pls|mlr|pcr|logistic regression|2d model full|pentagon|gaussian process regression|sparse bayesian regression|variational bayesian regression|logistic regression|lda|rda|regularized discriminant analysis|reguliarized discriminant analysis')] <- 'Linear Methods' # Class name from Elements of Stat.."
+metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'lr|lm|pls|mlr|pcr|logistic regression|2d model full|pentagon|gaussian process regression|sparse bayesian regression|variational bayesian regression|logistic regression|lda|rda|regularized discriminant analysis|reguliarized discriminant analysis|linear discriminant|quadratic discriminant')] <- 'Linear Methods' # Class name from Elements of Stat.."
 #metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'logistic regression|lda|rda|regularized discriminant analysis|reguliarized discriminant analysis')] <- 'Linear Classification'
 #metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'mars|gam')]<-'Additive Trees and Related Methods' #
 metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'rbf|gmm|local|polynomial|polygonal|knn|mars|gam')]<-'Kernel Smoothing, Additive and KNN'
@@ -124,7 +124,7 @@ metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'rbf|gmm|loca
 metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'nn|gru|lstm|ltsm|long short term memory|rprop|mcan')]<-'Neural Nets'
 metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'svm|svr|support vector regression|smoreg|smo ')]<-'Flexible Discriminants'
 #metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'knn')]<-'Prototype methods'
-metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'rf|extremely randomized tree regression|random forest|adaboost|gradient')]<-'Random Forests'
+metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'rf|extremely randomized tree regression|random forest|adaboost|gradient|tree|bag|boost')]<-'Random Forests'
 #metaMER_results$model_class_id[str_detect(metaMER_results$model_id,'rf')]<-'Ensemble Learning'
 
 ```
@@ -167,7 +167,6 @@ cat(paste("\nWhere", length(unique(metaMER_results$citekey[metaMER_results$model
 
 cat(paste("\nWhere", length(unique(metaMER_results$citekey[metaMER_results$model_category=='classification'])), "are classification studies"))
 # note that we have some classification studies that also do regression and vice versa?
-# THIS IS CORRECT (updated 24 October 2024):
 # THIS IS CORRECT (updated 17 January 2025):
 # [1] "We have 1114 observations"
 # [1] "We have 34 studies"
@@ -369,7 +368,7 @@ quantile(subset(R_studies,stimulus_genre_mixed=='MultiGenre')$feature_n,na.rm=TR
 
 # a combination of the two
 R_studies$feature_n_complexity_genre <- cut(R_studies$feature_n,
-                                      breaks = c(0,15,501,653,10000),
+                                      breaks = c(0,15,501,653,20000),
                                       labels = c("Small single genre study","Medium single genre/multigenre study","Medium-large single genre/multigenre study","Huge multigenre study"))
 #table(R_studies$feature_n_complexity_genre)
 ```
@@ -720,52 +719,6 @@ g1<-ggplot(C_studies,aes(x=values,fill=citekey))+
 print(g1)
 ```
 
-## Select a summary measure for valence and arousal separately
-
-```{r}
-#| echo: true
-#| eval: true
-
-C_studies$citekey <- factor(C_studies$citekey)
-
-C_summary <- summarise(group_by(C_studies,citekey),valuesMean=mean(values,na.rm=TRUE),valuesMedian=median(values,na.rm=TRUE),valuesMax=max(values,na.rm=TRUE),stimulus_n=first(stimulus_n),studyREF=first(studyREF),model_class_id=first(model_class_id), stimulus_genre_mixed=first(stimulus_genre_mixed),journal_type = first(journal_type))
-
-```
-
-## Visualise Summary
-
-```{r}
-#| echo: false
-#| eval: false
-
-g2 <- ggplot(C_summary,aes(x=stimulus_n,y=valuesMax,label=citekey,color=stimulus_genre_mixed))+
-  geom_point()+
-  geom_label_repel(size=1.5)+
-#  coord_flip()+
-  theme_bw()
-g2
-
-g3 <- ggplot(C_summary,aes(x=stimulus_n,y=valuesMax,label=citekey,color=model_class_id))+
-  geom_point()+
-  geom_label_repel(size=1.2)+
-#  coord_flip()+
-  theme_bw()
-g3
-
-## could be more informative when done with the full data
-C_studies$citekey<-factor(C_studies$citekey)
-
-
-g4 <- ggplot(C_studies,aes(x=stimulus_n,y=values,label=citekey,color=model_class_id,fill=model_class_id))+
-  geom_point(size=4)+
-  geom_label_repel(size=1.2, max.overlaps=50,show.legend = T,color='white')+
-#  scale_x_continuous(breaks = seq(0,1,by=.25),limits = c(0,1))+
-#  scale_y_continuous(breaks = seq(0,1,by=.25),limits = c(0,1))+
-  theme_bw()
-g4
-
-```
-
 ## Simple model complexity metric based on feature_n
 
 ```{r}
@@ -807,7 +760,7 @@ Needs to be done from the unsummarised data (`C_studies`).
 ```{r}
 #| echo: false
 #| eval: false
-
+C_studies$citekey <- factor(C_studies$citekey)
 tmp <- drop_na(C_studies)
 tmp$dimension<-str_to_title(tmp$dimension)
 tmp$model_class_id<-factor(tmp$model_class_id,
@@ -828,6 +781,81 @@ g <- ggplot(tmp,aes(x=model_class_id,y=values,color=citekey,label=citekey,shape=
 print(g)
 #ggsave(filename = 'FeatureN_regression.pdf',g,height = 7,width = 11)
 ```
+
+## Aggregate valence and arousal results for nguygen2017, bhuvanakumar2023
+
+```{r}
+C_summary <- summarise(group_by(C_studies,dimension,citekey),valuesMean=mean(values,na.rm=TRUE),valuesMedian=median(values,na.rm=TRUE),valuesMax=max(values,na.rm=TRUE),stimulus_n=first(stimulus_n),studyREF=first(studyREF),model_class_id=first(model_class_id),feature_n=first(feature_n),journal_type=first(journal_type),feature_n=first(feature_n),feature_n_complexity=first(feature_n_complexity),stimulus_genre_mixed=first(stimulus_genre_mixed)#,
+                        #feature_n_complexity_genre=first(feature_n_complexity_genre)
+                        )
+# 2025-01-24: averaging valence and arousal for this study, which makes the max equivalent to both the mean and median (two models: one valence, one arousal)
+C_summary[C_summary$citekey == "nguyen2017an",]$valuesMax <- C_summary[C_summary$citekey == "nguyen2017an",]$valuesMean 
+
+# 2025-01-24: averaging across quadrants for bhuvanakumar study
+# subset study
+bhuvanakumar <- subset(
+  C_studies, 
+  stringr::str_detect(
+    C_studies$citekey,
+    "bhuvanakumar"
+    )
+)
+# group by algorithm to average across the four quadrants
+bhuvanakumar$model_algorithm <- substr(
+  bhuvanakumar$model_id, 
+  1, 
+  4
+)
+# take the average for each algorithm
+bhuvanakumar |> 
+  group_by(model_algorithm) |>
+  mutate(values = mean(values)) -> bhuvanakumar
+# overwrite values in C_summary
+C_summary[C_summary$citekey == "bhuvanakumar2023em",]$valuesMean <- mean(unique(bhuvanakumar$values))
+C_summary[C_summary$citekey == "bhuvanakumar2023em",]$valuesMedian <- median(unique(bhuvanakumar$values))
+C_summary[C_summary$citekey == "bhuvanakumar2023em",]$valuesMax <- max(unique(bhuvanakumar$values))
+
+remove(bhuvanakumar)
+
+
+```
+
+## Visualise Summary
+
+```{r}
+#| echo: false
+#| eval: false
+
+g2 <- ggplot(C_summary,aes(x=stimulus_n,y=valuesMax,label=citekey,color=stimulus_genre_mixed))+
+  geom_point()+
+  geom_label_repel(size=1.5)+
+#  coord_flip()+
+  theme_bw()
+g2
+
+g3 <- ggplot(C_summary,aes(x=stimulus_n,y=valuesMax,label=citekey,color=model_class_id))+
+  geom_point()+
+  geom_label_repel(size=1.2)+
+#  coord_flip()+
+  theme_bw()
+g3
+
+## could be more informative when done with the full data
+C_studies$citekey<-factor(C_studies$citekey)
+
+
+g4 <- ggplot(C_studies,aes(x=stimulus_n,y=values,label=citekey,color=model_class_id,fill=model_class_id))+
+  geom_point(size=4)+
+  geom_label_repel(size=1.2, max.overlaps=50,show.legend = T,color='white')+
+#  scale_x_continuous(breaks = seq(0,1,by=.25),limits = c(0,1))+
+#  scale_y_continuous(breaks = seq(0,1,by=.25),limits = c(0,1))+
+  theme_bw()
+g4
+
+```
+
+
+
 
 ## Create descriptive table for the manuscript (Table 1, column 2)
 
